# golem

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  golem.toml  rust-toolchain.toml
.cargo/: config.toml
.config/: nextest.toml
.githooks/: pre-push
.github/: labeler.yml  pull_request_template.md
.github/workflows/: ci.yml  dco.yml  label.yml  release-note-check.yml  release-note-sync.yml  release.yml
android-server/: settings.gradle
android-server/app/: build.gradle
data/: names.json
data/cards/: adyen.json  amazon_ps.json  authorize_net.json  bambora.json  bluesnap.json  braintree.json  buckaroo.json  checkout_com.json  conekta.json  cybersource.json  dlocal.json  ebanx.json  flutterwave.json  global_payments.json  interswitch.json  klarna.json  komoju.json  mercado_pago.json  mollie.json  multisafepay.json  nmi.json  (+30 more)
docker/: linux-build.Dockerfile
docs/: accessibility.md  actions-reference.md  app-install.md  architecture.md  cli-reference.md  companions.md  contributing.md  distribution.md  error-codes.md  fake-data.md  how-golem-sees.md  output-formats.md  plan-perf-v2.md  roadmap.md  selectors.md  test-structure.md  unsupported.md  versioning.md
e2e/: accessibility_label.test.toml  add_media.test.toml  app_lifecycle.test.toml  assert_visible.test.toml  assertions.test.toml  bash.test.toml  branch_conditions.test.toml  branch_loop.test.toml  clear_data.test.toml  data_for_each.test.toml  device_controls.test.toml  double_tap.test.toml  expo_lifecycle.test.toml  fake_data_vars.test.toml  form_fill.test.toml  gestures.test.toml  keyboard.test.toml  load_fixture.test.toml  long_press.test.toml  multi_app_switching.test.toml  run.test.toml  scroll.test.toml  scroll_absorber.test.toml  scroll_search.test.toml  selectors.test.toml  subflow.test.toml  tap_after_keyboard.test.toml  teardown.test.toml  type_text.test.toml  typing_emoji_rtl.test.toml  visibility_percentage.test.toml  webview.test.toml  within_contains.test.toml
findings/: geo_country_plan.md  geo_research_africa_mideast.md  geo_research_americas.md  geo_research_asia_oceania.md  geo_research_europe.md
golem-cli/: Cargo.toml  build.rs
golem-cli/src/: a11y_extract.rs  cache.rs  cli.rs  companion_paths.rs  companions.rs  devices.rs  discovery.rs  doctor.rs  install_cache.rs  install_script_cmd.rs  lib.rs  main.rs  orchestrator.rs  project.rs  registration.rs  scaffold.rs  suite.rs  tree.rs
golem-cli/templates/install-scripts/: expo.sh  native-android.sh  native-ios.sh  tauri.sh
golem-cli/tests/: exit_codes.rs  ipc_contract.rs  output_formats.rs  repeat_flake.rs
golem-cli/tests/common/: mod.rs
golem-common/: Cargo.toml
golem-common/src/: command.rs  host_queue.rs  lib.rs
golem-devices/: Cargo.toml
golem-devices/src/: android.rs  concurrency.rs  ios.rs  lib.rs  lifecycle.rs  resolver.rs  resource_manager.rs  settings.rs  version.rs
golem-devices/src/lifecycle/: auto_create.rs  commands.rs  exec.rs
golem-driver/: Cargo.toml  build.rs
golem-driver/src/: android.rs  cdp.rs  commands.rs  common.rs  dom_traversal.js  ime.rs  ios.rs  ios_display.rs  ios_display.toml  lib.rs  mock.rs  stub.rs  webkit.rs
golem-driver/src/common/: alerts.rs  hierarchy.rs  http.rs  webview.rs
golem-element/: Cargo.toml
golem-email/: Cargo.toml
golem-email/src/: ethereal.rs  imap_poller.rs  lib.rs
golem-email/tests/: live_ethereal.rs
golem-events/: Cargo.toml
golem-orchestrator/: Cargo.toml
golem-orchestrator/src/: coverage.rs  install_matrix.rs  lib.rs  plan.rs
golem-orchestrator/src/plan/: expand.rs
golem-parser/: Cargo.toml
golem-parser/src/: config.rs  fixture.rs  lib.rs  mixin.rs  validation.rs
golem-report/: Cargo.toml
golem-report/examples/: event_gallery.rs
golem-report/src/: accumulator.rs  flake.rs  human.rs  json.rs  junit.rs  lib.rs  output.rs  stream.rs  toon.rs
golem-report/src/stream/: render.rs
golem-runner/: Cargo.toml
golem-runner/src/: accessibility.rs  actions.rs  barrier.rs  branch.rs  capture.rs  cleanup.rs  context.rs  data_driven.rs  device_vars.rs  executor.rs  fingerprint.rs  fixture_loader.rs  for_each.rs  glyph.rs  http_transport.rs  installed_state.rs  installer.rs  interp.rs  lib.rs  loops.rs  parallel.rs  perf.rs  policy.rs  resolution.rs  scroll.rs  subflow.rs  teardown.rs
golem-runner/src/accessibility/: annotate.rs
golem-runner/src/actions/: app_lifecycle.rs  assertion.rs  capture.rs  device.rs  external.rs  interaction.rs  media.rs  test_helpers.rs  wait.rs
golem-runner/src/actions/interaction/: gesture.rs
golem-runner/src/resolution/: bounded.rs  coord.rs  selector_build.rs  settle.rs
golem-runner/src/scroll/: geometry.rs
golem-runner/tests/: advanced_features.rs  integration.rs  policy_tests.rs
golem-vars/: Cargo.toml
golem-vars/src/: card_loader.rs  evaluate.rs  generators.rs  geo.rs  geo_loader.rs  interpolation.rs  kana.rs  lib.rs  script.rs  seed.rs  sentence_loader.rs  structured.rs  transcribe.rs
golem-vars/src/structured/: address.rs  credit_card.rs  person.rs  repertoire.rs
npm/: README.md  install.js  package.json
scripts/: build-linux.sh  bump-version.sh  install-app-b-android.sh  install-app-b-ios.sh  install-app-e.sh  install-app.sh  install.sh  loc.sh  release-notes.sh  release.sh  sync-pr-notes.sh  test-ios-companion.sh  verify-specs.sh
setup-golem/: README.md  action.yml
specs/: device_resolution.qnt  parallel_execution.qnt  variable_scoping.qnt
test-app/: README.md  hierarchy-fixture.json  index.html  package-lock.json  package.json  ui-spec.json  vite.config.js
test-app-b/: README.md  hierarchy-fixture.json  index.html  package-lock.json  package.json  vite.config.js
test-app-b/src-tauri/: Cargo.toml  tauri.conf.json
test-app-b/src-tauri/capabilities/: default.json
test-app-b/src-tauri/src/: main.rs
test-app-e/: App.tsx  README.md  app.json  eas.json  package-lock.json  package.json
test-app/src-tauri/: Cargo.toml  tauri.conf.json
test-app/src-tauri/capabilities/: default.json
test-app/src-tauri/icons/: icon.icns
test-app/src-tauri/src/: lib.rs  main.rs
(+298 files in other folders)
