[workspace]
members = [
    "golem-cli",
    "golem-runner",
    "golem-parser",
    "golem-driver",
    "golem-element",
    "golem-devices",
    "golem-vars",
    "golem-report",
    "golem-email",
    "golem-events",
    "golem-orchestrator",
    "golem-common",
]
exclude = ["test-app/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.6.37"

[workspace.lints.clippy]
unwrap_used = "deny"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "rustls-tls"] }
chrono = "0.4"
async-trait = "0.1"
sha1 = "0.10"
ignore = "0.4"
indexmap = { version = "2", features = ["serde"] }
