[package]
name = "golem-cli"
version.workspace = true
edition = "2021"

[[bin]]
name = "golem"
path = "src/main.rs"

[dependencies]
golem-runner = { path = "../golem-runner" }
golem-parser = { path = "../golem-parser" }
golem-driver = { path = "../golem-driver" }
golem-element = { path = "../golem-element" }
golem-devices = { path = "../golem-devices" }
golem-vars = { path = "../golem-vars" }
golem-report = { path = "../golem-report" }
golem-email = { path = "../golem-email" }
golem-events = { path = "../golem-events" }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
rand_chacha = "0.3"
dirs = "6"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
