[package]
name = "golem-cli"
version.workspace = true
edition = "2021"

[[bin]]
name = "golem"
path = "src/main.rs"

[dependencies]
golem-runner = { path = "../golem-runner" }
golem-parser = { path = "../golem-parser" }
golem-driver = { path = "../golem-driver" }
golem-element = { path = "../golem-element" }
golem-devices = { path = "../golem-devices" }
golem-vars = { path = "../golem-vars" }
golem-report = { path = "../golem-report" }
golem-events = { path = "../golem-events" }
golem-orchestrator = { path = "../golem-orchestrator" }
golem-common = { path = "../golem-common" }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = "0.22"
dialoguer = { version = "0.11", default-features = false, features = ["fuzzy-select"] }
chrono = { workspace = true }
dirs = "6"

[dev-dependencies]
tempfile = "3"
# fd-level stdout/stderr capture in the in-process integration harness
# (tests/common) — the streamed renderer writes from spawned tasks, so a
# process-fd redirect captures it without threading writers through.
libc = "0.2"
# `test-util` enables `start_paused` so reboot/wait timeouts advance instantly
# in tests (also relied on by the orchestrator tests via feature unification).
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
