[package]
name = "golem-devices"
version.workspace = true
edition = "2021"

[dependencies]
golem-events = { path = "../golem-events" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
libc = "0.2"

[lints]
workspace = true
