[package]
name = "golem-driver"
version = "0.4.1"
edition = "2021"

[dependencies]
golem-element = { path = "../golem-element" }
reqwest = { workspace = true, features = ["json"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tokio-tungstenite = "0.26"
futures-util = "0.3"

[lints]
workspace = true
