[package]
name = "golem-driver"
version.workspace = true
edition = "2021"

[dependencies]
golem-element = { path = "../golem-element" }
golem-common = { path = "../golem-common" }
reqwest = { workspace = true, features = ["json"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tokio-tungstenite = "0.26"
futures-util = "0.3"
plist = "1.8"
uuid = { workspace = true }

[dev-dependencies]
# `test-util` enables `tokio::test(start_paused = true)` so settle-gate
# tests don't burn real wall-clock against the 10s deadline.
tokio = { workspace = true, features = ["test-util"] }

[build-dependencies]
minifier = "0.3"

[lints]
workspace = true
