[package]
name = "golem-email"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
regex = "1"
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
futures-util = "0.3"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
webpki-roots = "1"

[dev-dependencies]
# Live-only (ignored) e2e gate: send a message via the provisioned Ethereal
# SMTP account so the async-imap receive path can be verified end to end.
lettre = { version = "0.11", default-features = false, features = [
    "builder",
    "smtp-transport",
    "tokio1-rustls-tls",
    "ring",
] }

[lints]
workspace = true
