[package]
name = "golem-orchestrator"
version.workspace = true
edition = "2021"

[dependencies]
golem-parser = { path = "../golem-parser" }
golem-devices = { path = "../golem-devices" }
golem-runner = { path = "../golem-runner" }
golem-events = { path = "../golem-events" }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
