[package]
name = "golem-parser"
version.workspace = true
edition = "2021"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
indexmap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
