[package]
name = "golem-report"
version.workspace = true
edition = "2021"

[dependencies]
golem-events = { path = "../golem-events" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }

[lints]
workspace = true
