[package]
name = "golem-runner"
version.workspace = true
edition = "2021"

[dependencies]
golem-parser = { path = "../golem-parser" }
golem-driver = { path = "../golem-driver" }
golem-element = { path = "../golem-element" }
golem-vars = { path = "../golem-vars" }
golem-devices = { path = "../golem-devices" }
golem-report = { path = "../golem-report" }
golem-email = { path = "../golem-email" }
golem-events = { path = "../golem-events" }
tokio = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
rand_chacha = "0.3"
regex = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
