[package]
name = "golem-runner"
version.workspace = true
edition = "2021"

[dependencies]
golem-parser = { path = "../golem-parser" }
golem-driver = { path = "../golem-driver" }
golem-element = { path = "../golem-element" }
golem-vars = { path = "../golem-vars" }
golem-devices = { path = "../golem-devices" }
golem-report = { path = "../golem-report" }
golem-email = { path = "../golem-email" }
golem-events = { path = "../golem-events" }
golem-common = { path = "../golem-common" }
tokio = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
rand = { workspace = true }
rand_chacha = "0.3"
regex = "1"
sha1 = { workspace = true }
ignore = { workspace = true }
# Screenshot-based a11y checks (contrast + text-size) + annotated output.
image = { version = "0.25", default-features = false, features = ["png"] }
imageproc = { version = "0.25", default-features = false }
# Direct PNG encoder for the annotated screenshot — `image` doesn't expose
# text-chunk writing, so we encode via `png` to embed the iTXt issue metadata.
png = "0.18"

[dev-dependencies]
tempfile = "3"
# `test-util` enables `tokio::test(start_paused = true)` so tests for code
# paths that include real `tokio::time::sleep` calls (e.g. `handle_stop`)
# don't burn real wall-clock.
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
