[package]
name = "golem-vars"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_chacha = "0.3"
uuid = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
