[package]
name = "golem-vars"
version.workspace = true
edition = "2021"

[dependencies]
golem-events = { path = "../golem-events" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_chacha = "0.3"
uuid = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
