[package]
name = "golem-vars"
version.workspace = true
edition = "2021"

[dependencies]
golem-events = { path = "../golem-events" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_chacha = "0.3"
uuid = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
# Used only to derive the JIS X 0208 kanji repertoire exactly from the EUC-JP
# code table (see structured::repertoire), rather than embedding a hand-curated
# — and inevitably drifting — kanji list.
encoding_rs = "0.8"
# NFD decomposition for the ASCII fold (see script::ascii_fold): lets a Latin
# name with diacritics derive its ascii form instead of storing it.
unicode-normalization = "0.1"

[lints]
workspace = true
