[workspace]

[package]
name = "golem-test-app-b"
version = "0.3.0"
description = "GOLEM E2E Test App B"
edition = "2021"

[lib]
name = "golem_test_app_b_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
