[workspace]

[package]
name = "golem-test-app"
version = "0.5.4"
description = "GOLEM E2E Test App"
edition = "2021"

[lib]
name = "golem_test_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
